@@ -1,3 +1,9 @@
+2014-01-31         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (dist-hook): Improve creation of pc/config.h. We
+	have to jump through a lot of hoops for 'make distcheck' to
+	actually work.
+
 2014-01-30         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (dist-hook): Improve creation of pc/config.h to copy
